Fixed the bugs in overlapping FAQ section

--- a/src/pages/SimpleWayToSendMoney/index.module.scss
+++ b/src/pages/SimpleWayToSendMoney/index.module.scss
@@ -125,9 +125,12 @@
 }
 .simpleWayToSendMoneyMainContainer {
   cursor: pointer;
+  height: 600px;
   position: relative; /* Ensure the container is positioned relatively */
   @media screen and (max-width: 992px) {
     cursor: none;
+    height: auto;
+
     // position: static;
   }
 }
